--- a/www/templates/client-step1.html
+++ b/www/templates/client-step1.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="false" view-title="YOU'RE ALMOST DONE!" class="userAuth">
-	<ion-content>
-		<img src="img/Icon_2StepNav_01.png" style="display:block;width:25%;margin:0 auto;">
+	<ion-content class="padding">
+		<img src="img/Icon_2StepNav_01.png" style="display:block;width:25%;">
 
 		<p>All we need now is the address of your most recently acquired property. Until this setup is complete, you will not be able to use your account. </p>
 		<p>It should take less than 2 minutes</p>
