--- a/www/templates/connect-with-my-agent.html
+++ b/www/templates/connect-with-my-agent.html
@@ -12,11 +12,11 @@
 				</div>
 
 				<h3>Name</h3>
-				<p>Specify a Status Message(e.g."Remember to set your clocks back 1 hour and a whole bunch of text no one lorem ipsum dolom amet spiritus sancti!")</p>
-				<span><p>Sent Message</p><img src="img/Icon_sent_message.png"></span>
+				<p style="padding:5px;">Specify a Status Message(e.g."Remember to set your clocks back 1 hour and a whole bunch of text no one lorem ipsum dolom amet spiritus sancti!")</p>
+				<span><p>Send Message</p><a ui-sref="dashboard.connect-with-my-agent"><img src="img/Icon_sent_message.png"></a></span>
 			</div>
 
-			<div class="agent-info">
+			<div class="agent-info padding">
 				<div>
 					<span class="agent-phone-number"><p>Tel: 000-000-0000</p> <p>Cel: 000-000-0000</p></span>
 					<p class="agent-email">Email: name@email.com</p>
