--- a/www/templates/homeowner-signup.html
+++ b/www/templates/homeowner-signup.html
@@ -1,22 +1,26 @@
 <ion-view hide-nav-bar="false" view-title="Create A homeowner Account" class="padding userAuth">
-	<ion-content>
-		<img src="img/Icon_2StepNav_01.png" style="display:block;width:25%;margin:0 auto;">
+	<ion-content class="padding">
+		<img src="img/Icon_2StepNav_01.png" style="display:block;width:25%;">
 
 		<div class="activation-code">
 			<h4>Activation Code</h4>
 				<div class="list list-inset act-code">
 					<label class="item-input">
 						<input type="text" placeholder="Your Realtor's Activation Code">
-						<i class="icon ion-help-circled"></i>
+						<i class="icon ion-help-circled placeholder-icon"></i>
 					</label>
 				</div>
 		</div>
 
 		<div class="account-info">
-			<h4>Activation Code</h4>
+			<h4>Account Information</h4>
+			<div class="inline-select" style="justify-content:space-between;margin-bottom:5px;">
 			<input type="text" placeholder="First Name">
 			<input type="text" placeholder="Last Name">
-			<input type="text" placeholder="Email Address"><input type="password" placeholder="Password"><input type="password" placeholder="Confirm Password">
+			</div>
+			<input class="full-width-input" type="text" placeholder="Email Address">
+			<input class="full-width-input" type="password" placeholder="Password">
+			<input class="full-width-input" type="password" placeholder="Confirm Password">
 		</div>
 
 		<span class="btm-buttons">
