--- a/www/templates/realtor-dashboard-messages.html
+++ b/www/templates/realtor-dashboard-messages.html
@@ -1,18 +1,12 @@
-<ion-view class="clientDash" title="123 Fakename St. Toronto">
-	<!--
-	<ion-header-bar align-title="center">
-		<button class="button button-clear icon ion-navicon"></button>
-		<div class="title"><p style="font-size:14px;">Address:</p><p class="title" style="top:13.5px;">419 Avenue Toronto, Ontario{{client.address}}</p></div>
-		<button class="button button-clear icon ion-arrow-down-b"></button>
-	</ion-header-bar>
-	-->
+<ion-view class="realtor-messages" title="123 Fakename St. Toronto">
+
 <ion-nav-buttons side="right">
     <a style="color: #ffa801;" class="button button-icon icon ion-arrow-down-b"></a> 
 </ion-nav-buttons>
 
 	<ion-content>
 		<div class="address-details-header primary-color" style="display:inline-flex; width:100%; justify-content:center; align-items:center;">
-			<h2 class="title" style="display:inline-flex; justify-content:center; width:86%;color:white;">Home Owner's Feed</h2> <i class="button button-icon icon ion-plus-round" style="color:white; background-color:rgb(157, 157, 157);position:absolute;right:0px;"></i> 
+			<h2 class="title" style="display:inline-flex; justify-content:center; width:86%;color:white;">982923847432</h2> <i class="button button-icon icon ion-plus-round" style="color:white; background-color:rgb(157, 157, 157);position:absolute;right:0px;"></i> 
 		</div>
 
 		<div class="content">
