--- a/www/templates/realtor-step-2.html
+++ b/www/templates/realtor-step-2.html
@@ -1,6 +1,6 @@
 <ion-view view-title="YOU'RE ALMOST DONE" hide-nav-bar="false" class="userAuth">
 	<ion-content class="padding">
-	<img class="realtor-signup-step2-application-status" src="img/Icon_4StepNav_02.png" style="display:block;width:80%;margin:0 auto;">
+	<img class="realtor-signup-step2-application-status" src="img/Icon_4StepNav_02.png">
 		<div class="list">
 			<form>
 				<h4>Profile Photo</h4>
