--- a/www/templates/to-do-lists.html
+++ b/www/templates/to-do-lists.html
@@ -1,1 +1,16 @@
-to-do-lists
+<ion-view title="123 Fakename St. Toronto">
+	<ion-content class="to-do-list">
+		
+		<div class="address-details-header primary-color" style="display:inline-flex; width:100%; justify-content:center; align-items:center;">
+			<h2 class="title" style="display:inline-flex; justify-content:center; width:86%;color:white;">TO DO LISTS</h2> <i class="button button-dark icon ion-plus-round" style="color:white;"></i> 
+		</div>
+
+		<div class="to-do-lists">
+			<ion-list>
+				<ion-item ng-repeat="list in lists" ui-sref="dashboard.to-do-list.details({list: $index})">
+					{{list.name}}<ion-option-button class="progress-button" ng-click="deleteMessage(message)"><i class="icon ion-trash-a"></i></ion-option-button>
+				</ion-item>
+			</ion-list>
+		</div>
+	</ion-content>
+</ion-view>
