--- a/www/templates/realtor-step-3.html
+++ b/www/templates/realtor-step-3.html
@@ -1,9 +1,9 @@
 <ion-view view-title="You're Almost Done" hide-nav-bar="false" class="userAuth realtor-step-3">
 	<ion-content class="padding realtor-signup-step-3">
-		<img src="img/Icon_4StepNav_03.png" style="display:block;width:80%;margin:0 auto;">
+		<img src="img/Icon_4StepNav_03.png" >
 		<form style="margin:10px;">
 			<h4>Company/Brokerage Logo</h4>	
-			<div class="item-input-inset" style="padding-left:0px;">
+			<div class="item-input-inset" style="padding-left:0px;padding-right:0px;">
 				<label class="item item-input" style="margin-right:0px;width:75%;">
 					<input type="text" placeholder="URL">
 				</label>
@@ -31,7 +31,6 @@
 				<input type="submit" class="button progress-button button-full" value="Continue" style="width:100%;" ng-click="addUser(user)" ui-sref="home.realtor-lastStep">
 			</div>
 		</form>
-		User info: {{user}}
 	</ion-content>
 </ion-view>
 <!-- FORM INPUTS NEED WORK CSS-->
