--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,5 +21,6 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <ion-nav-view name="menu"></ion-nav-view>
+  <ion-nav-view name="realtor-menu"></ion-nav-view>
 
 </ion-tabs>
